# solace-browser

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .env.example  .gitignore  ADVANCED_TECHNIQUES.md  AGENT.md  AGENTS.md  ARIA_SNAPSHOTS_GUIDE.md  AUDIT_ACTION_PLAN.md  AUDIT_EXECUTIVE_SUMMARY.md  BROWSER_CONSOLIDATION_SUMMARY.md  BROWSER_CRAWL_UPGRADES.md  CAPABILITY_RATING.md  CAPTCHA_HANDLER_INTEGRATION_GUIDE.md  CHANGES_MADE.txt  CLAUDE.md  CLI_REFACTORING_PROGRESS.md  CLOUDFLARE_BOT_DETECTION_ANALYSIS.md  CLOUD_RUN_GUIDE.md  COMPILATION_STATUS.md  CONCEPT_CROSS_REFERENCES.md  CONTRIBUTING.md  CORE_CONCEPTS.md  CREDENTIAL_SETUP.md  DEVELOPER_DEBUGGING.md  DEVELOPER_PROTOCOL.md  DIAGRAMS-AUDIT.md  DOCUMENTATION_REFACTORING_SUMMARY.md  Dockerfile  Dockerfile.cloud-twin  Dockerfile.simple  EDGE_TESTS.md  ERROR_HANDLING_GUIDE.md  FINAL_STATUS.md  GAMIFICATION_SETUP_COMPLETE.md  GEMINI.md  GMAIL_AUTOMATION_SUCCESS.md  GMAIL_COMPLETE_SUCCESS.md  GMAIL_HARSH_QA_REPORT.md  (+264 more)
.claude/: UPDATE_SUMMARY.md
apps/: README.md
archive/: TODO.sab37.2026-03-28.md  TODO.sac13.2026-03-28.md  TODO.sac21.2026-03-28.md  TODO.sac42.2026-03-28.md  TODO.sac45.2026-03-28.md  TODO.sac46.2026-03-28.md  TODO.sac47.2026-03-28.md  TODO.sac48.2026-03-28.md  TODO.sac49.2026-03-28.md  TODO.sac50.2026-03-28.md  TODO.sac54.2026-03-28.md  TODO.sac56.2026-03-28.md  TODO.sac57.2026-03-28.md  TODO.sac60.2026-03-28.md  TODO.sac61.2026-03-28.md  TODO.sac65.2026-03-28.md  TODO.sac69.2026-03-28.md  TODO.sac72.2026-03-28.md  TODO.sac74.2026-03-28.md  TODO.sac76.2026-03-28.md  TODO.sac80.2026-03-28.md  TODO.sac85.2026-03-29.md  TODO.sac88.2026-03-29.md  TODO.sac90.2026-03-29.md  TODO.sac91.2026-03-29.md  TODO.sac92.2026-03-29.md  TODO.sag20.2026-03-28.md  TODO.sag29.2026-03-28.md  TODO.sah32.2026-03-28.md  TODO.sai15.2026-03-28.md  TODO.sam27.2026-03-28.md  TODO.sap11.2026-03-28.md  TODO.sap39.2026-03-28.md  TODO.sau12.2026-03-28.md  TODO.sav38.2026-03-28.md  TODO.sax25.2026-03-28.md  TODO.sax35.2026-03-28.md  TODO.sda8.2026-03-28.md  TODO.sdi7.2026-03-28.md  TODO.sdx4.2026-03-28.md
artifacts/: GMAIL_OAUTH2_DISCOVERY_REPORT.md  accessibility-testing.json  action-analysis.json  action-execution-result.json  amazon_portal_deliverables.json  analytics-report.json  batch-execution-log.json  batch-loaded.json  batch-result.json  batch-verification-results.json  bottleneck-analysis.json  browser-interface.json  cache-implementation.json  captured-event.json  clickability-verification.json  context-preservation.json  cookie-management.json  cumulative-state-snapshots.json  deterministic-replay.json  display-detection.json  episodes-loaded.json  error-classification.json  error-detected.json  error-log-entry.json  error-report.json  event-listeners.json  execution-trace-full.json  execution-trace-t2.json  execution-trace-t3.json  execution-trace-t4.json  form-detection.json  form-submission.json  form-validation.json  gmail_patterns.json  gmail_production_session.json  gmail_working_session.json  integration-e2e.json  js-execution-t1.json  js-execution-t2.json  js-execution-t3.json  (+75 more)
browser/: __init__.py  advanced.py  context.py  core.py  handlers.py  http_server.py  semantic.py
canon/: CANON_INDEX.md  episode-schema.json
combos/: full-browser-task.md  oauth3-recipe-execute.md  snapshot-heal-replay.md  twin-delegation.md
diagrams/: 01-browser-startup-sequence.md  02-cron-scheduler-patterns.md  03-first-install-ux-flow.md  04-tunnel-architecture.md  05-alcoa-evidence-chain.md  06-dragon-warrior-pricing-tiers.md  07-task-002-test-recovery.md  08-task-001-recipe-hardening.md  09-task-002-frontend-state-machines.md  README.md  browser-action-lifecycle.md  browser-multi-layer-architecture.md  evidence-pipeline.md  oauth3-enforcement-flow.md  part11-alcoa-mapping.md  recipe-engine-fsm.md  solace-browser-full-stack.md  twin-sync-flow.md
docs/: ARCHITECTURE_OAUTH3_HOMEPAGE.md  BROWSER_API.md  GCS_DOWNLOAD_DISTRIBUTION.md  OAUTH3_QUICK_REFERENCE.md  README_OAUTH3_DESIGN.md  (+1 more)
frontend/: README.md  (+8 more)
solace-hub/src-tauri/: Cargo.toml  build.rs  main.rs  tauri.conf.json
solace-hub/src-tauri/data/default/apps/: .domain-index.json
solace-hub/src-tauri/icons/: .gitkeep
solace-runtime/: Cargo.toml
solace-runtime/src/: agents.rs  cloud.rs  config.rs  cron.rs  crypto.rs  event_log.rs  evidence.rs  job_queue.rs  lib.rs  main.rs  mcp.rs  persistence.rs  pubsub.rs  recipe.rs  server.rs  state.rs  updates.rs  utils.rs
solace-runtime/src/app_engine/: inbox.rs  mod.rs  outbox.rs  runner.rs  template.rs  wasm_sandbox.rs
solace-runtime/src/auth/: merkle.rs
solace-runtime/src/backoffice/: crud.rs  db.rs  mod.rs  schema.rs
solace-runtime/src/pzip/: evidence.rs  json.rs  jsonl.rs  jsonl_codec.rs  jsonl_tests.rs  mod.rs  stillwater.rs  util.rs  web.rs
solace-runtime/src/routes/: actions.rs  agents.rs  analytics.rs  app_create.rs  apps.rs  backoffice.rs  browser_control.rs  browser_native.rs  budget.rs  chat.rs  cli_workers.rs  cloud.rs  delight.rs  domains.rs  email.rs  esign.rs  events.rs  evidence.rs  file_watcher.rs  files.rs  health.rs  hub_control.rs  mod.rs  notifications.rs  oauth3.rs  pubsub_api.rs  qa.rs  recipes.rs  rtc.rs  schedules.rs  sessions.rs  sidebar.rs  sync.rs  tunnel.rs  tutorial.rs  webhooks.rs  websocket.rs  wiki.rs
solace-runtime/templates/: feed-digest.html  morning-brief.html  report-base.html  runtime.css
solace-runtime/tests/: integration.rs
src/solace/phase2/: API.md  BUILD.gn  DESIGN.md  EPISODE_SCHEMA.json  IMPLEMENTATION.md  TEST_SPEC.md  action_serializer.cc  action_serializer.h  episode_schema.cc  episode_schema.h  recording_manager.cc  recording_manager.h  snapshot_capturer.cc  snapshot_capturer.h
src/solace/recording/: BUILD.gn  action_types.h  episode_serializer.cc  episode_serializer.h  recorder.js  recording_manager.cc  recording_manager.h  snapshot_canonicalizer.cc  snapshot_canonicalizer.h  test_recorder.js
src/solace/recording/examples/: episodes.jsonl  generate_examples.js  github-search.json  gmail-compose.json  multi-page-nav.json  reddit-post.json  signup-form.json
(+5327 files in other folders)
