[package]
name = "solace-hub"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Solace Hub — Tauri desktop app for Solace Browser orchestration"
authors = ["Solace AGI <noreply@solaceagi.com>"]

# Prevent direct binary execution; use `cargo tauri build` or `cargo tauri dev`
[[bin]]
name = "solace-hub"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "system-tray",
  "notification",
  "shell-open",
  "window-center",
  "window-close",
  "window-hide",
  "window-maximize",
  "window-minimize",
  "window-set-focus",
  "window-set-min-size",
  "window-set-size",
  "window-set-title",
  "window-show",
  "window-start-dragging",
  "window-unmaximize",
  "window-unminimize",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = "2"
sha2 = "0.10"
hex = "0.4"
dirs-next = "2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
wry = { path = "../patches/wry/wry-0.24.11" }
